--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <title>Vite + React + TS</title>
 </head>
 
-<body class="dark">
-  <div id="root"></div>
+<body>
+  <div id="root">
+  </div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
